Изменение цветов в Status Bar и создание HoursFragment.kt и DaysFragment.kt. Создание VpAdapter.kt для vpAdapter2. настройка отображения элементов при нажатии на tabLayout в MainFragment.kt.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -148,12 +148,12 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Часы" />
+            android:text="@string/hours" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Дни" />
+            android:text="@string/days" />
 
     </com.google.android.material.tabs.TabLayout>
 
