Добавление listener в WeatherAdapter.kt по нажатию на один из элементов в списке в DaysFragment.kt. Добавление логики отображения инфы при нажатии на карточку общей инфы на MainFragment.kt верхней части экрана. С помощью ifEmpty() в private fun updateCurrentCard(). Фикс отображения данных при отображении в во вкладке "Прогноз по дням". Делается это в MainFragment.kt в  private fun parseDays(mainObject: JSONObject), добавляя .toFloat().toInt().toString()

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -65,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/aubrey"
-                android:text="Тольятти"
+                android:text="Нет соединения с интернетом"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/aubrey"
-                android:text="20°C"
                 android:textColor="@color/white"
                 android:textSize="70sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +88,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/aubrey"
-                android:text="Солнечно"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -103,7 +101,6 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/aubrey"
-                android:text="35°C / 15°C"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
